# trend-whisperer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  task.md
.github/workflows/: ci.yml
docs/plans/: 2026-07-20-trend-whisperer-plan.md
docs/specs/: 2026-07-20-trend-whisperer-design.md
scripts/: fetch_data.py
src/: app.py
src/core/: interfaces.py
src/providers/: var_provider.py  varmax_provider.py  vecm_provider.py
src/services/: diagnostics.py  forecast_service.py  narrative_service.py  preprocessing.py  report_service.py
tests/integration/: test_pipeline.py
tests/unit/: test_diagnostics.py  test_fetch_data.py  test_forecast_service.py  test_interfaces.py  test_narrative_service.py  test_preprocessing.py  test_report_service.py  test_var_provider.py  test_varmax_provider.py  test_vecm_provider.py
