[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-whisperer"
version = "0.1.0"
description = "Per-store sales forecasting (VAR/VARMAX/VECM) with GenAI narrative generation, built on sameer-forge."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "PIE", "PLC"]
ignore = ["E501", "B008", "UP007", "PIE790"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["PLC0415", "T201"]
"tests/*" = ["S101", "PLC0415"]
"conftest.py" = ["PLC0415"]
"src/services/diagnostics.py" = ["PLC0415", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
